# FaceDetection

./: README.md  import-summary.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/shubham/facedetection/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/shubham/facedetection/: MainActivity.java  NativeClass.java
app/src/main/jni/: NativeOpenCV.cpp  NativeOpenCV.h
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/shubham/facedetection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary320/: build.gradle
